// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render active class 1`] = `
"<div>
  <a
    href=\\"/\\"
    class=\\"foo bar\\"
  >  </a>
</div>
"
`;

exports[`Link should render active class 2`] = `
"<div>
  <a
    href=\\"/foo\\"
    class=\\"foo\\"
  >  </a>
</div>
"
`;

exports[`Link should render exact active class 1`] = `
"<div>
  <a
    href=\\"/\\"
    class=\\"foo bar\\"
  >  </a>
</div>
"
`;

exports[`Link should render exact active class 2`] = `
"<div>
  <a
    href=\\"/bob/foo\\"
    class=\\"foo\\"
  >  </a>
</div>
"
`;
